tests/data-clumps/test-cases/parameter-parameter/classes-with-implemented-interfaces/positive/java/source/MyCardReaderInterface.java
public interface MyCardReaderInterface {
    void readCard(String callBack, boolean showInstruction, boolean hideInstruction, String nfcInstruction);
}

