tests/data-clumps/test-cases/parameter-parameter/classes-with-implemented-interfaces/negative/java/source/MyUnsupportedCardReaderImpl.java
public class MyUnsupportedCardReaderImpl implements MyCardReaderInterface {
    @Override
    public void readCard(String callBack, boolean showInstruction, boolean hideInstruction, String nfcInstruction){
        return;
    }
}
